@@ -1,3 +1,4 @@
+	* added support for uTorrent interpretation of multi-tracker torrents
 	* handle torrents with duplicate filenames
 	* piece timeouts are adjusted to download rate limits
 	* encodes urls in torrent files that needs to be encoded
